:recycle: Refactor: Nickname 전역으로 분리 및 기존 Nickname VO와 통합